update logo with finalization

--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
 }
 
 .gpt-earn-background {
-  background: url("/gpt-earn-bg.png") repeat;
+  background: url("https://daeta.xyz/lvrg/gpt-earn-bg.png") repeat;
 }
 
 /* Hide the default scrollbar */
